# seraphic

./: Cargo.toml  README.md  output.txt
examples/: echo.rs
seraphic-derive/: Cargo.toml  README.md
seraphic-derive/src/: lib.rs
src/: client.rs  connection.rs  error.rs  lib.rs  msg.rs  packet.rs  server.rs  socket.rs  thread.rs  tokio.rs
src/connection/: endpoint.rs  mod.rs
src/connection/io/: mod.rs  packet.rs
src/io/: mod.rs  packet.rs
tests/lib/: async_io.rs  connection.rs  main.rs  serde_.rs  sync_io.rs
