[package]
name = "seraphic-derive"
description = "Derive macros for seraphic"
license = "MIT OR Apache-2.0"
readme="README.md"
authors = [ "Void Kandy" ]
version = "0.1.1"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
darling = "0.20.10"
proc-macro2 = "1.0.92"
quote = "1.0.37"
syn = {version= "2.0.90", features =["full"]}
